--- a/public/games/snake/main.css
+++ b/public/games/snake/main.css
@@ -14,6 +14,7 @@ body {
   flex-direction: row;
   font-family: 'Courier New', Courier, monospace;
   user-select: none;
+  -webkit-user-select: none;
   background-color: rgb(64, 64, 64);
 }
 
